--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <h1>Vedansh Kashyap</h1>
+                    <h1>Vedansh</h1>
                     <div class="page-scroll">
                         <p class="job-title">Secondary II iCAN</p>
                         <div class="clearfix visible-xxs"></div>
@@ -94,7 +94,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm Vedansh, I'm in the iCan program and I work on a bunch of things (read the my projects part for specifics).</p>
+                        <p>Hello! I'm Vedansh, I'm in the iCan program at Heritage and I work on a bunch of things (read the my projects part for specifics).</p>
                     </div>
                 </div>
             </div>
@@ -103,35 +103,35 @@
         <section class="site-section section-skills">
             <div class="container">
                 <div class="text-center">
-                    <h3>My Skills</h3>
+                    <h3>What I worked on</h3>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Html/css</h4>
+                            <h4>Coding</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="65"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="10"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
-                            <h4>Python</h4>
+                            <h4>Digital Art</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="25"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="30"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Scratch</h4>
+                            <h4>Workshop and Woodworking</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="80"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="25"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
                             <h4>Photoshop</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="45"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="10"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                     </div>
@@ -139,7 +139,7 @@
                         <div class="skill">
                             <h4>Graphic Design</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="35"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="25"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
