--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <div class="service">
                             <img src="assets/img/front-end.svg" alt="Front End Developer">
                             <h4>Programming</h4>
-                            <p>I'm learning basic pyhton and HTML to make fun little games, simple tools and apps and websites like this one</p>
+                            <p>I'm learning basic python and HTML to make fun little games, simple tools and apps and websites like this one</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
