--- a/index.html
+++ b/index.html
@@ -192,24 +192,45 @@
                         <h3>My recent projects</h3>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
+
+         <section id="service" class="site-section section-services overlay text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>Guinea Pig Central</h3>
+                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                    </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/front-end.svg" alt="Coding">
-                            <h4>Guinea Pig Central</h4>
                             <p>I've coded a website similar to this one but with a less advanced HTML template, it has everything you need to own a guinea pig</p>
                         </div><!-- /.service -->
+                    </div>
+                    
+        <section id="service" class="site-section section-services overlay text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>Photoshop Art</h3>
+                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/Photoshop Paint 2.png" alt="Sunrise Painting (RDR2)">
-                            <h4>Photoshop Art</h4>
                             <p>Using layer color mechanics and shading software I colored a black and white image using Photoshop </p>
                         </div><!-- /.service -->
+                    </div>
+
+        <section id="service" class="site-section section-services overlay text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>Scene Modeling</h3>
+                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/Screenshot 2025-04-27 141755.png" alt="Winter Scene">
-                            <h4>3D Modeling</h4>
                             <p>Utilising Blender I made a pretty realistic ambient scene (my Sec II expo project).</p>
                         </div><!-- /.service -->
                     </div>
