--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3>Photoshop Art</h3>
-                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                        <img src="assets/img/Photoshop Paint 2.png" alt="Sunset Painting (RDR2)">
                         <p>Most people don't know that photoshop can also be used to paint pictures, for example I used a black and white sketch of a video game scene and colored in layers on to of it, creating a cool color effect</p>
                     </div>
                 </div>
@@ -225,7 +225,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3>Scene Modeling</h3>
-                        <img src="assets/img/lines.svg" class="img-lines" alt="lines">
+                        <img src="assets/img/Screenshot 2025-04-27 141755.png" alt="Still shot of my animated winter scene">
                         <p>Utilising Blender, a versitile and extremely cool open-source 3-D modeling and shading software I made a pretty realistic ambient scene (my Sec II expo project).</p>
                     </div>
                 </div>
