--- a/index.html
+++ b/index.html
@@ -70,22 +70,6 @@
         </nav><!-- /.primary-navigation -->
     </header><!-- /#header -->
 
-    <div id="hero" class="hero">
-        <div class="container">
-            <div class="row">
-
-                <div class="col-md-6">
-                    <h1>Vedansh</h1>
-                    <div class="page-scroll">
-                        <p class="job-title">Secondary II iCAN</p>
-                        <div class="clearfix visible-xxs"></div>
-                        <a href="#portfolio" class="btn btn-border">Recent Projects</a>
-                    </div>
-                </div>   
-            </div>
-        </div>
-    </div><!-- /.hero -->
-
     <main id="main" class="site-main">
 
         <section id="about" class="site-section section-about text-center">
@@ -153,7 +137,7 @@
             </div>
         </section><!-- /.secton-skills -->
 
-        <section id="service" class="site-section section-services overlay text-center">
+        <section id="portfolio" class="site-section section-services overlay text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
